--- a/projects/first-angular-project/src/app/app.component.html
+++ b/projects/first-angular-project/src/app/app.component.html
@@ -1,2 +1,9 @@
-<h3>I am an asdappComponent</h3>
-<app-servers></app-servers>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <h3>I am an asdappComponent</h3>
+        </div>
+    </div>
+<!-- <div app-servers></div> -->
+<div class="app-servers"></div>
+</div>
