--- a/projects/first-angular-project/src/app/app.component.html
+++ b/projects/first-angular-project/src/app/app.component.html
@@ -4,6 +4,8 @@
             <h3>I am an asdappComponent</h3>
         </div>
     </div>
-<!-- <div app-servers></div> -->
-<div class="app-servers"></div>
+    <app-servers></app-servers>
+    <hr>
+    <app-success-alert></app-success-alert>
+    <app-warning-alert></app-warning-alert>
 </div>
