--- a/projects/first-angular-project/src/app/servers/servers.component.html
+++ b/projects/first-angular-project/src/app/servers/servers.component.html
@@ -1,3 +1,4 @@
-<button [disabled]="allowNewServer" class="btn btn-primary">Add server</button>
+<button (click)="onCreateServer()" [disabled]="allowNewServer" class="btn btn-primary">Add server</button>
+<p>{{serverCreationStatus}}</p>
 <app-server></app-server>
 <app-server></app-server>
