--- a/projects/first-angular-project/src/app/servers/servers.component.html
+++ b/projects/first-angular-project/src/app/servers/servers.component.html
@@ -1,4 +1,7 @@
+<label for="">Server Name</label>
+<input type="text" class="form-control" (input)="onUpdateServerName($event)">
 <button (click)="onCreateServer()" [disabled]="allowNewServer" class="btn btn-primary">Add server</button>
 <p>{{serverCreationStatus}}</p>
+<p>{{serverName}}</p>
 <app-server></app-server>
 <app-server></app-server>
