--- a/projects/first-angular-project/src/app/servers/servers.component.html
+++ b/projects/first-angular-project/src/app/servers/servers.component.html
@@ -1,5 +1,10 @@
 <label for="">Server Name</label>
-<input type="text" class="form-control" (input)="onUpdateServerName($event)">
+<!-- <input type="text" class="form-control" (input)="onUpdateServerName($event)"> -->
+<input
+type="text"
+class="form-control"
+[(ngModel)]="serverName"
+>
 <button (click)="onCreateServer()" [disabled]="allowNewServer" class="btn btn-primary">Add server</button>
 <p>{{serverCreationStatus}}</p>
 <p>{{serverName}}</p>
