--- a/projects/first-angular-project/src/app/servers/servers.component.html
+++ b/projects/first-angular-project/src/app/servers/servers.component.html
@@ -5,8 +5,21 @@ type="text"
 class="form-control"
 [(ngModel)]="serverName"
 >
-<button (click)="onCreateServer()" [disabled]="allowNewServer" class="btn btn-primary">Add server</button>
-<p>{{serverCreationStatus}}</p>
-<p>{{serverName}}</p>
+<button 
+(click)="onCreateServer()"
+ [disabled]="allowNewServer" 
+ class="btn btn-primary">
+ Add server
+</button>
+    <!-- <p>{{serverCreationStatus}}</p> -->
+    <p *ngIf="serverCreated">Server was created, server name is {{serverName}}</p>
+<label>Userame</label>
+<input
+type="text"
+class="form-control"
+[(ngModel)]="username"
+>
+<p>{{username}}</p>
+<button (click)="changeUserName($event)" class="btn btn-primary" [disabled]="!username">Click</button>
 <app-server></app-server>
 <app-server></app-server>
