--- a/projects/first-angular-project/src/app/servers/servers.component.html
+++ b/projects/first-angular-project/src/app/servers/servers.component.html
@@ -12,7 +12,8 @@ class="form-control"
  Add server
 </button>
     <!-- <p>{{serverCreationStatus}}</p> -->
-    <p *ngIf="serverCreated">Server was created, server name is {{serverName}}</p>
+    <p *ngIf="serverCreated; else noServer">Server was created, server name is {{serverName}}</p>
+    <ng-template #noServer><p>No server is created!</p></ng-template>
 <label>Userame</label>
 <input
 type="text"
