--- a/projects/first-angular-project/src/app/server/server.component.html
+++ b/projects/first-angular-project/src/app/server/server.component.html
@@ -1,1 +1,4 @@
-<h1 [ngStyle]="{backgroundColor:getColor()}">Server with ID {{serverId}} is {{getServerStatus() }}</h1>
+<h1 
+[ngStyle]="{backgroundColor:getColor()}"
+[ngClass]="{online : getServerStatus() === 'online'}"
+>Server with ID {{serverId}} is {{getServerStatus() }}</h1>
