assigning an alias to be used outside current component

--- a/projects/databinding/src/app/app.component.html
+++ b/projects/databinding/src/app/app.component.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-xs-12">
    <app-server-component 
-   *ngFor="let serverElement of serverElements" [element]="serverElement"
+   *ngFor="let serverElement of serverElements" [srvElement]="serverElement"
    ></app-server-component>
     </div>
   </div>
