--- a/projects/databinding/src/app/cockpit/cockpit.component.html
+++ b/projects/databinding/src/app/cockpit/cockpit.component.html
@@ -7,7 +7,8 @@
       #serverNameInput
       >
       <label>Server Content</label>
-      <input type="text" class="form-control" [(ngModel)]="newServerContent">
+      <!-- <input type="text" class="form-control" [(ngModel)]="newServerContent"> -->
+      <input type="text" class="form-control" #serverContentInput>
       <br>
       <button
         class="btn btn-primary"
