--- a/projects/databinding/src/app/app.component.html
+++ b/projects/databinding/src/app/app.component.html
@@ -8,7 +8,12 @@
     <div class="col-xs-12">
    <app-server-component 
    *ngFor="let serverElement of serverElements" [srvElement]="serverElement"
-   ></app-server-component>
+   >
+   <p>
+    <strong *ngIf="serverElement.type === 'server'" style="color: red">{{ serverElement.content }}</strong>
+    <em *ngIf="serverElement.type === 'blueprint'">{{ serverElement.content }}</em>
+  </p>
+</app-server-component>
     </div>
   </div>
 </div>
