--- a/projects/directives-deep-dive/src/app/app.component.html
+++ b/projects/directives-deep-dive/src/app/app.component.html
@@ -7,8 +7,11 @@
       <br><br>
       <ul class="list-group">
        <div *ngIf="onlyOdd">
+        
         <li
         class="list-group-item"
+        [ngClass]="{odd : odd % 2 !== 0}"
+        [ngStyle]="{backgroundColor : odd % 2 !== 0 ? 'yellow' : 'transparent'}"
         *ngFor="let odd of oddNumbers"
         >
         {{odd}}
