--- a/projects/directives-deep-dive/src/app/app.component.html
+++ b/projects/directives-deep-dive/src/app/app.component.html
@@ -1,36 +1,44 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <button
-        class="btn btn-primary"
-        (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
-      <br><br>
+      <button class="btn btn-primary" (click)="onlyOdd = !onlyOdd">
+        Only show <span *ngIf="onlyOdd; else even">odd</span> numbers
+        <ng-template #even>even</ng-template>
+      </button>
+      <br /><br />
       <ul class="list-group">
-       <div *ngIf="onlyOdd">
-        
-        <li
-        class="list-group-item"
-        [ngClass]="{odd : odd % 2 !== 0}"
-        [ngStyle]="{backgroundColor : odd % 2 !== 0 ? 'yellow' : 'transparent'}"
-        *ngFor="let odd of oddNumbers"
-        >
-        {{odd}}
-      </li>
-       </div>
-       <div *ngIf="!onlyOdd">
+         <div *ngIf="onlyOdd">
           <li
-        class="list-group-item"
-        *ngFor="let even of evenNumbers"
-        >
-        {{even}}
+            class="list-group-item"
+            [ngClass]="{ even: even % 2 !== 0 }"
+            [ngStyle]="{backgroundColor: even % 2 === 0 ? 'yellow' : 'transparent'
+            }"
+            *ngFor="let even of evenNumbers"
+          >
+            {{ even }}
           </li>
-       </div>
-      </ul>
-      <ng-template [ngIf]="onlyOdd">
-        <p>Only odd</p>
-      </ng-template>
-      <p appBasicHighlight >Style me with basic directive!</p>
-      <p appBetterHighlight>Style me with better directive!</p>
+        </div>
+        <!-- <div *ngIf="!onlyOdd">
+          <li class="list-group-item" *ngFor="let even of evenNumbers">
+            {{ even }}
+          </li>
+        </div> -->
+          <div *appUnless="onlyOdd">
+          <li
+            class="list-group-item"
+            [ngClass]="{ odd: odd % 2 !== 0 }"
+            [ngStyle]="{backgroundColor: odd % 2 !== 0 ? 'yellow' : 'transparent'
+            }"
+            *ngFor="let odd of oddNumbers"
+          >
+            {{ odd }}
+          </li>
+          </div>
+        </ul>
+      <p appBasicHighlight>Style me with basic directive!</p>
+      <p appBetterHighlight [defaultColor]="'yellow'" highlightColor="red">
+        Style me with better directive!
+      </p>
     </div>
   </div>
 </div>
