--- a/projects/directives-deep-dive/src/app/app.component.html
+++ b/projects/directives-deep-dive/src/app/app.component.html
@@ -39,6 +39,12 @@
       <p appBetterHighlight [defaultColor]="'yellow'" highlightColor="red">
         Style me with better directive!
       </p>
+      <div [ngSwitch]="value">
+        <p *ngSwitchCase="5">value is 5</p>
+        <p *ngSwitchCase="10">values is 10</p>
+        <p *ngSwitchCase="100">values is 100</p>
+        <p *ngSwitchDefault>value is Default</p>
+      </div>
     </div>
   </div>
 </div>
