--- a/projects/routing/src/app/servers/servers.component.html
+++ b/projects/routing/src/app/servers/servers.component.html
@@ -11,14 +11,12 @@
     </div>
   </div>
   <div class="col-xs-12 col-sm-4">
-    <a routerLink="servers">Reload Page</a>
-    <a routerLink="servers">Reload Page</a>
-
-    <a routerLink="servers">Reload Page</a>
 
     <app-edit-server></app-edit-server>
     <hr>
     <app-server></app-server>
   </div>
+  <button (click)="onReload()">Reload Page</button>
+
 </div>
 
