nesting routing with router-outlet in the children of the main component

--- a/projects/routing/src/app/servers/servers.component.html
+++ b/projects/routing/src/app/servers/servers.component.html
@@ -3,6 +3,8 @@
     <div class="list-group">
       <div>here</div>
       <a
+      [routerLink]="['/servers',server.id]"
+      [queryParams]="{allowEdit:1}"
         href="#"
         class="list-group-item"
         *ngFor="let server of servers">
@@ -11,12 +13,11 @@
     </div>
   </div>
   <div class="col-xs-12 col-sm-4">
-
+    <button class="btn btn-primary"  (click)="onReload()">Reload Page</button>
+    <router-outlet></router-outlet>
     <app-edit-server></app-edit-server>
     <hr>
     <app-server></app-server>
   </div>
-  <button (click)="onReload()">Reload Page</button>
-
 </div>
 
