--- a/projects/routing/src/app/servers/server/server.component.html
+++ b/projects/routing/src/app/servers/server/server.component.html
@@ -1,3 +1,3 @@
 <h5>{{ server.name }}</h5>
 <p>Server status is {{ server.status }}</p>
-<a routerLink="/servers">Reload page</a>
+<button class="btn btn-primary" (click)="onEdit()">Edit</button>
