--- a/projects/routing/src/app/servers/servers.component.html
+++ b/projects/routing/src/app/servers/servers.component.html
@@ -4,7 +4,8 @@
       <div>here</div>
       <a
       [routerLink]="['/servers',server.id]"
-      [queryParams]="{allowEdit:1}"
+      [queryParams]="{allowEdit:server.id === 3 ? '1' : '0'}"
+      fragment="loading"
         href="#"
         class="list-group-item"
         *ngFor="let server of servers">
@@ -13,11 +14,11 @@
     </div>
   </div>
   <div class="col-xs-12 col-sm-4">
-    <button class="btn btn-primary"  (click)="onReload()">Reload Page</button>
+    <!-- <button class="btn btn-primary"  (click)="onReload()">Reload Page</button> -->
     <router-outlet></router-outlet>
-    <app-edit-server></app-edit-server>
+    <!-- <app-edit-server></app-edit-server>
     <hr>
-    <app-server></app-server>
+    <app-server></app-server> -->
   </div>
 </div>
 
