--- a/projects/shopping-list/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/projects/shopping-list/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,5 +1,6 @@
-<a href="#"
-(click)="onSelect()"
+<a style="cursor: pointer;"
+[routerLink]="[id + 1]"
+routerLinkActive="active"
 class="list-group-item clearfix">
     <div class="pull-left">
         <h4 class="list-group-item-heading">{{recipe.name}}</h4>
