--- a/projects/forms/src/app/app.component.html
+++ b/projects/forms/src/app/app.component.html
@@ -27,7 +27,8 @@
             <option value="teacher">Your first teacher?</option>
           </select>
         </div>
-        <button class="btn btn-primary" type="submit">Submit</button>
+        <button [disabled]="!f.valid"
+        class="btn btn-primary" type="submit">Submit</button>
       </form>
     </div>
   </div>
