--- a/projects/forms/src/app/app.component.html
+++ b/projects/forms/src/app/app.component.html
@@ -1,8 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <form (ngSubmit)="onSubmit(f)" #f="ngForm">
-        <div id="user-data">
+      <form (ngSubmit)="onSubmit()" #f="ngForm">
+        <div id="user-data" ngModelGroup="userData"
+          #userData="ngModelGroup"
+        >
           <div class="form-group">
             <label for="username">Username</label>
             <input
@@ -14,7 +16,7 @@
             required
             >
           </div>
-          <button class="btn btn-default" type="button">Suggest an Username</button>
+          <button class="btn btn-default" (click)="suggestUserName()" type="button">Suggest an Username</button>
           <div class="form-group">
             <label for="email">Mail</label>
             <input type="email" required
@@ -28,6 +30,7 @@
             >Please enter a valid email!</span>
           </div>
         </div>
+        <p *ngIf="!userData.valid && userData.touched">User Data is invalid!</p>
         <div class="form-group">
           <label for="secret">Secret Questions</label>
           <select [ngModel]="defaultQuestion" name="secret" id="secret" class="form-control">
@@ -41,6 +44,16 @@
             class="form-control"
           ></textarea>
           <p>Your reply :{{answer}}</p>
+          <div class="radio" *ngFor="let gender of genders">
+              <label>
+                <input type="radio" name="gender"
+                  ngModel
+                  [value]="gender"
+                  required
+                />
+                {{gender}}
+              </label>
+          </div>
         </div>
         <button [disabled]="!f.valid"
         class="btn btn-primary" type="submit">Submit</button>
