--- a/projects/forms-reactive/src/app/app.component.html
+++ b/projects/forms-reactive/src/app/app.component.html
@@ -9,14 +9,18 @@
             id="username"
             formControlName="username"
             class="form-control">
+            <span *ngIf="!signUpForm.get('username')?.valid && signUpForm.get('username')?.touched"
+             class="help-block">Please enter a valid username!</span>
         </div>
         <div class="form-group">
-          <label for="email">email</label>
+          <label for="email">Email</label>
           <input
             type="text"
             id="email"
             formControlName="email"
             class="form-control">
+            <span *ngIf="!signUpForm.get('email')?.valid && signUpForm.get('email')?.touched"
+             class="help-block">Please enter a valid email!</span>
         </div>
         <div class="radio" *ngFor="let gender of genders">
           <label>
@@ -26,7 +30,9 @@
               [value]="gender">{{ gender }}
           </label>
         </div>
-        <button class="btn btn-primary" type="submit">Submit</button>
+        <span *ngIf="!signUpForm.valid && signUpForm.touched"
+             class="help-block">Please enter valid data</span>
+        <button [disabled]="!signUpForm.valid"class="btn btn-primary" type="submit">Submit</button>
       </form>
     </div>
   </div>
