--- a/projects/forms-reactive/src/app/app.component.html
+++ b/projects/forms-reactive/src/app/app.component.html
@@ -11,7 +11,9 @@
               formControlName="username"
               class="form-control">
               <span *ngIf="!signUpForm.get('userData.username')?.valid && signUpForm.get('userData.username')?.touched"
-               class="help-block">Please enter a valid username!</span>
+               class="help-block">
+               <span *ngIf="signUpForm.get('userData.username')?.errors?.['nameIsForbidden']"></span>
+               This field is required!</span>
           </div>
           <div class="form-group">
             <label for="email">Email</label>
