--- a/projects/shopping-list/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/projects/shopping-list/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <form (ngSubmit)="onAddItem(f)" #f="ngForm">
+        <form (ngSubmit)="onSubmit(f)" #f="ngForm">
             <div class="row">
                 <div class="col-sm-5 form-group">
                     <label for="name">Name</label>
@@ -20,14 +20,16 @@
                     name="amount"
                     ngModel
                     required
-                    pattern="^[1-9]+[0-9]*"
+                    pattern="^[1-9]+[0-9]*$"
                     >
                 </div>
                 <div class="row">
                     <div class="col-xs-12">
-                        <button class="btn btn-success" [disabled]="!f.valid" type="submit">Add</button>
-                        <button class="btn btn-danger" type="button">Delete</button>
-                        <button class="btn btn-primary" type="button">Clear</button>
+                        <button class="btn btn-success" [disabled]="!f.valid" type="submit">
+                            {{editMode ? 'Update' : "Add"}}
+                        </button>
+                        <button *ngIf="editMode" (click)="onDelete()" class="btn btn-danger" type="button">Delete</button>
+                        <button  (click)="onClear()" class="btn btn-primary" type="button">Clear</button>
                     </div>
                 </div>
             </div>
