forms in project renewed

--- a/projects/shopping-list/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/projects/shopping-list/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,9 +1,9 @@
 <div class="row">
     <div class="col-xs-12">
-        <form>
+        <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
             <div class="row">
                 <div class="col-xs-12">
-                    <button type="subimt" class="btn btn-success">Save</button>
+                    <button type="subimt" [disabled]="!recipeForm.valid" class="btn btn-success">Save</button>
                     <button type="button" class="btn btn-danger">Cancel</button>
                 </div>
             </div>
@@ -13,6 +13,7 @@
                         <label for="name">Name</label>
                         <input type="text"
                          id="name"
+                         formControlName="name"
                          class="form-control"
                          >
                     </div>
@@ -21,6 +22,7 @@
                         <input type="text"
                          id="imagePath"
                          class="form-control"
+                         formControlName="imagePath"
                          >
                     </div>
                 </div>
@@ -35,24 +37,33 @@
             <div class="row">
                 <div class="form-group">
                     <label for="description">Description</label>
-                    <textarea type="text" name="description" id="description" rows="6" class="form-control"></textarea>
+                    <textarea formControlName="description" type="text" name="description" id="description" rows="6" class="form-control"></textarea>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-xs-12">
-                    <div class="row">
+                <div class="col-xs-12" formArrayName="ingredients">
+                    <div class="row" style="margin-top:10px;"
+                    *ngFor="let ingredientCtrl of controls; let i = index" [formGroupName]="i">
                         <div class="col-xs-8">
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" formControlName="name">
                         </div>
                         <div class="col-xs-2">
-                            <input type="number" class="form-control">
+                            <input type="number" class="form-control" formControlName="amount">
 
                         </div>
                         <div class="col-xs-2">
                             <button class="btn btn-danger">X</button>
-
                         </div>
+                    </div>
+                    <hr/>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <button type="button" (click)="onAddIngredient()"
+                            class="btn btn-success">
+                                Add Ingredient
+                        </button>
+                    </div>
                     </div>
                 </div>
             </div>
